<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/btnSave"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_push_me"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/rgGender"
        app:layout_constraintTop_toBottomOf="@+id/swChildren"
        app:layout_constraintVertical_bias="0.096" />

    <Button
        android:id="@+id/btnClear"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="308dp"
        android:text="@string/button_erase"
        app:layout_constraintBottom_toBottomOf="@+id/btnSave"
        app:layout_constraintEnd_toEndOf="@+id/rgGender"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/btnSave"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_view_age"
        app:layout_constraintBottom_toBottomOf="@+id/tfAge"
        app:layout_constraintEnd_toStartOf="@+id/tfAge"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/textView2"
        app:layout_constraintTop_toTopOf="@+id/tfAge"
        app:layout_constraintVertical_bias="0.666" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="61dp"
        android:layout_height="18dp"
        android:text="@string/text_view_surname"
        app:layout_constraintBottom_toBottomOf="@+id/tfSurname"
        app:layout_constraintEnd_toStartOf="@+id/tfSurname"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/textView"
        app:layout_constraintTop_toTopOf="@+id/tfSurname"
        app:layout_constraintVertical_bias="0.642" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_view_name"
        app:layout_constraintBottom_toBottomOf="@+id/tfName"
        app:layout_constraintEnd_toStartOf="@+id/tfName"
        app:layout_constraintHorizontal_bias="0.425"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/tfName"
        app:layout_constraintVertical_bias="0.592" />

    <EditText
        android:id="@+id/tfAge"
        android:layout_width="236dp"
        android:layout_height="46dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/edit_text_age_hint"
        android:inputType="number"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/tfSurname"
        app:layout_constraintTop_toBottomOf="@+id/tfSurname"
        app:layout_constraintVertical_bias="0.041" />

    <EditText
        android:id="@+id/tfName"
        android:layout_width="236dp"
        android:layout_height="46dp"
        android:autofillHints="Tu nombre"
        android:ems="10"
        android:hint="@string/edit_text_name_hint"
        android:inputType="textPersonName|textCapWords"
        android:text="@string/text_field_empty"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.692"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.065" />

    <EditText
        android:id="@+id/tfSurname"
        android:layout_width="236dp"
        android:layout_height="46dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/edit_text_surname_hint"
        android:inputType="textPersonName|textCapWords"
        android:text="@string/text_field_empty"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.692"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tfName"
        app:layout_constraintVertical_bias="0.041" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_view_gender"
        app:layout_constraintBottom_toBottomOf="@+id/rgGender"
        app:layout_constraintEnd_toStartOf="@+id/rgGender"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/textView3"
        app:layout_constraintTop_toTopOf="@+id/rgGender" />

    <RadioGroup
        android:id="@+id/rgGender"
        android:layout_width="236dp"
        android:layout_height="35dp"
        android:layout_marginTop="24dp"
        android:gravity="start"
        android:hapticFeedbackEnabled="false"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/tfAge"
        app:layout_constraintTop_toBottomOf="@+id/tfAge"
        app:layout_constraintVertical_bias="0.0">

        <RadioButton
            android:id="@+id/rbMale"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/male_gender_option" />

        <RadioButton
            android:id="@+id/rbFemale"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/female_gender_option" />
    </RadioGroup>

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_view_marital_status"
        app:layout_constraintBottom_toBottomOf="@+id/spMaritialStatus"
        app:layout_constraintEnd_toStartOf="@+id/spMaritialStatus"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/textView5"
        app:layout_constraintTop_toTopOf="@+id/spMaritialStatus"
        app:layout_constraintVertical_bias="0.518" />

    <Spinner
        android:id="@+id/spMaritialStatus"
        android:layout_width="wrap_content"
        android:layout_height="46dp"
        android:minWidth="102dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/rgGender"
        app:layout_constraintTop_toBottomOf="@+id/rgGender"
        app:layout_constraintVertical_bias="0.05" />

    <androidx.appcompat.widget.SwitchCompat
        android:id="@+id/swChildren"
        android:layout_width="wrap_content"
        android:layout_height="46dp"
        android:text="@string/any_children_switch"
        app:layout_constraintBottom_toBottomOf="@+id/spMaritialStatus"
        app:layout_constraintEnd_toEndOf="@+id/rgGender"
        app:layout_constraintHorizontal_bias="0.188"
        app:layout_constraintStart_toEndOf="@+id/spMaritialStatus"
        app:layout_constraintTop_toTopOf="@+id/spMaritialStatus"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/lblMonitor"
        android:layout_width="223dp"
        android:layout_height="wrap_content"
        android:textColor="@color/colorError"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/btnClear"
        app:layout_constraintHorizontal_bias="0.153"
        app:layout_constraintStart_toStartOf="@+id/btnSave"
        app:layout_constraintTop_toBottomOf="@+id/btnSave"
        app:layout_constraintVertical_bias="0.223" />

</androidx.constraintlayout.widget.ConstraintLayout>